--- a/src/app/components/landing/footer/footer.component.html
+++ b/src/app/components/landing/footer/footer.component.html
@@ -1,7 +1,7 @@
 <section>
   <div class="container text-center">
   <h1 class="display-6">
-    PRo Location · Trabajo Final de Grado · GrupoXX
+    PRo Location · Trabajo Final de Grado · Grupo01
   </h1>
   <p class="lead">
     Raúl Herrera & Pavlo Dudnyk.
