--- a/src/app/components/app/main-app/main-app.component.css
+++ b/src/app/components/app/main-app/main-app.component.css
@@ -9,3 +9,15 @@ main app-aside-app {
 main app-section-app {
   width: 60%;
 }
+
+@media screen and (max-width: 1024px) {
+
+  main app-aside-app {
+    width: 40%;
+  }
+
+  main app-section-app {
+    width: 60%;
+  }
+
+}
